# indicatif-repro

./: Cargo.toml
src/: main.rs  stdio.rs  term.rs
